base/ingress-class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: matas-ingress-class
spec:
  controller: k8s.io/ingress-nginx
