base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matas-nginx-service
spec:
  selector:
    app: matas-nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: matas-apache-service
spec:
  selector:
    app: matas-apache
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
